--- a/ui/src/styles/index.css
+++ b/ui/src/styles/index.css
@@ -64,11 +64,11 @@
 body {
   margin: 0;
   min-width: 320px;
-  min-height: 100vh;
+  min-height: 100dvh;
   overflow: hidden;
 }
 
 #root {
   width: 100vw;
-  height: 100vh;
+  height: 100dvh;
 }
